--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "fullstack study",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "win": "node src/index.js"
+    "win": "babel-node src/index.js",
+    "dev": "nodemon --exec babel-node src/index.js"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,11 @@
   "homepage": "https://github.com/SonMinSeock/youtube-clone#readme",
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.2",
+    "@babel/node": "^7.20.2",
+    "@babel/preset-env": "^7.20.2",
+    "nodemon": "^2.0.20"
   }
 }
