--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "win": "babel-node src/index.js",
-    "dev": "nodemon --exec babel-node src/index.js"
+    "dev": "nodemon --exec babel-node src/init.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/SonMinSeock/youtube-clone#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "mongoose": "^6.8.0",
     "morgan": "^1.10.0",
     "pug": "^3.0.2"
   },
