--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   },
   "homepage": "https://github.com/SonMinSeock/youtube-clone#readme",
   "dependencies": {
+    "@ffmpeg/core": "^0.11.0",
+    "@ffmpeg/ffmpeg": "^0.11.6",
     "bcrypt": "^5.1.0",
     "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "mongoose": "^6.8.0", 
+    "mongoose": "^6.8.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.6.1",
